--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,18 @@
-version: '3'
-
 services:
   web:
-    image: deeptiijais/docker-compose-demo:swarm2023
-    deploy:
-      replicas: 5
+    build: .
     ports:
       - "8000:5000"
     networks:
       - counter-net
     volumes:
-      - counter-vol:/code
-
+      - type: volume
+        source: counter-vol
+        target: /code
   redis:
-    image: redis:alpine
+    image: "redis:alpine"
     networks:
-      - counter-net
+      counter-net:
 
 networks:
   counter-net:
